# EgeNotifier

./: .env.default  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/egebot/: __init__.py  app.py  config.py  logging_setup.py
src/egebot/bot/: keyboards.py  states.py
src/egebot/bot/filters/: admin.py
src/egebot/bot/handlers/: __init__.py  admin.py  auth.py  callbacks.py  commands.py  fallback.py  helpers.py  menu.py  settings.py  universities.py
src/egebot/bot/middlewares/: __init__.py  auth_state.py  deps.py
src/egebot/content/: admin_copy.py  federal_subjects.py  ui_copy.py  uni_copy.py  university_catalog.py
src/egebot/core/: rustest.py
src/egebot/data/: universities.json
src/egebot/domain/: admin.py  exam_snapshot.py  models.py  score_history.py  universities.py
src/egebot/security/: __init__.py  crypto.py
src/egebot/services/: __init__.py  admin.py  auth.py  scores.py  session.py  settings.py  universities.py  watcher.py
src/egebot/storage/: database.py  fsm.py  schema.sql
src/egebot/storage/repositories/: __init__.py  accounts.py  auth_drafts.py  score_history.py
src/egebot/tools/: __init__.py  update_universities.py
tests/: fakes.py
tests/integration/: test_auth_scores_watcher.py  test_soft_session.py
tests/unit/: test_admin.py  test_catalog_update.py  test_crypto.py  test_exam_snapshot.py  test_fsm_storage.py  test_rustest.py  test_score_history.py  test_scores.py  test_subjects.py  test_universities.py  test_watcher_and_config.py
