[project]
name = "egenotifier"
version = "0.1.0"
description = "Telegram bot for checking Russian EGE exam results"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13,<4",
    "aiohttp>=3.9,<4",
    "asyncpg>=0.29,<1",
    "cryptography>=42,<46",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "loguru>=0.7,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.5,<1",
]

[project.scripts]
egenotifier = "egebot.app:main"
update-universities = "egebot.tools.update_universities:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
egebot = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
